setting multilingual mode

--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -3,4 +3,11 @@
 languageName = "En"
 languageCode = "en-us"
 contentDir = "content/english"
+weight = 2
+
+################ Spanish language ##################
+[es]
+languageName = "Es"
+languageCode = "es"
+contentDir = "content/spanish"
 weight = 1
