--- a/config/_default/menus.es.toml
+++ b/config/_default/menus.es.toml
@@ -7,7 +7,7 @@ name = "Aprende"
 
 [[main]]
 name = "Recursos"
-pageRef = "pages/elements"
+pageRef = "pages/recursos"
 weight = 2
 
 [[main]]
@@ -34,7 +34,7 @@ weight = 2
 [[main]]
 parent = "Aprende"
 name = "Mentorías"
-pageRef = "pages/elements"
+pageRef = "/contact"
 weight = 3
 
 [[main]]
@@ -75,7 +75,7 @@ weight = 1
 
 [[footer]]
 name = "Elements"
-pageRef = "/elements"
+pageRef = "pages/elements"
 weight = 2
 
 [[footer]]
