--- a/config/development/server.toml
+++ b/config/development/server.toml
@@ -6,8 +6,13 @@
 # to = '/fr/404.html'
 # status = 404
 
+#[[redirects]]
+#from = '/**'
+#to = '/en/404.html'
+#status = 404
+
 # Default language must be last.
 [[redirects]]
 from = '/**'
-to = '/en/404.html'
+to = '/es/404.html'
 status = 404
