--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 ######################## default configuration ####################
 # The base URL of your site (required). This will be prepended to all relative URLs.
-baseURL = "/"
+baseURL = "https://proyectobitcoin.github.io/"
 # Title of your website (required).
 title = "Proyecto Bitcoin"
 # Your theme name
@@ -8,7 +8,7 @@ theme = "hugoplate"
 # Default time zone for time stamps; use any valid tz database name: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
 timeZone = "America/Caracas"
 # post pagination
-paginate = 3 # see https://gohugo.io/extras/pagination/
+paginate = 4 # see https://gohugo.io/extras/pagination/
 # post excerpt
 summaryLength = 10 # see https://gohugo.io/content-management/excerpts/
 # disable language
